--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section id="services" class="services section">
 
       <!-- Section Title -->
-      <div class="container title" data-aos="fade-up">
+      <div class="container title" data-aos="fade-up" data-aos-delay="100">
         <h2 style="color: black;">Our Offerings</h2>
 
       </div><!-- End Section Title -->
@@ -99,7 +99,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item  position-relative">
               <div class="icon">
                 <i class="bi bi-lightbulb"></i>
@@ -111,7 +111,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon">
                 <i class="bi bi-file-text"></i>
@@ -123,7 +123,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon">
                 <i class="bi bi-headset"></i>
@@ -353,7 +353,7 @@
     <div class="container">
       <div>
         <div class="row gy-4 py-2 mb-3 border-bottom">
-          <div class="col-lg-4  col-md-12 mb-3 logo-bo">
+          <div class="col-lg-4  col-md-12 mb-3">
             <a href="#hero" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
               <div class="logo">
                 <img src="assets/img/logo3.png" alt="Our Logo">
