--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-5 about-images" data-aos="fade-up" data-aos-delay="200">
-            <div class="row gy-4">
+            <div class="row gy-4 me-5">
               <img src="assets/img/how-works-img.jpeg" alt="" width="400px" height="650px">
             </div>
 
@@ -367,8 +367,7 @@
                 <p class="testimonial-quote">eMigr8 AI transformed my career path.</p>
               </div>
               <p class="testimonial-name">Rekha Matthew</p>
-              <p class="testimonial-role">Product Manager
-              </p>
+              <p class="testimonial-role">Product Manage</p>
             </div>
           </div>
 
@@ -431,9 +430,9 @@
         <div class="col-lg-2  col-md-12">
           <h5>Products</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="https://emigr8visa.com/emigr8-tech-visa-landscape/" target="_blank"
+            <li class="nav-item mb-2"><a href="https://bincom.co.uk/emigr8techvisalandscape/" target="_blank"
                 class="nav-link p-0 ">Tech Visa Landscape</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0">eMigr8 Tech Visa</a></li>
+            <li class="nav-item mb-2"><a href="https://emigr8visa.com/" target="_blank" class="nav-link p-0">eMigr8 Tech Visa</a></li>
           </ul>
 
         </div>
@@ -454,12 +453,12 @@
 
           <div class="social-links d-flex justify-content-end col-lg-6">
             <a href="https://bincom.net/emigr8communityfacebook" target="_blank"><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
             <a href="https://bincom.net/emigr8communitylinkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
             <a href="https://bincom.net/emigr8communitytwitter" target="_blank"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.youtube.com/@emigr8community" target="_blank"><i class="bi bi-youtube"></i></a>
             <a href="https://bincom.net/emigr8community" target="_blank"><i class="bi bi-telegram"></i></a>
-            <a href=""><i class="bi bi-whatsapp"></i></a>
+            <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0" target="_blank"><i class="bi bi-whatsapp"></i></a>
 
           </div>
           
