--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             <div class="me-2">
               <a href="https://app.emigr8visa.com" target="_blank">
                 <img width="102px" height="30px"
-                  src="./assets/Img/Download for web.png" alt=""> </a>
+                  src="./assets/img/Download for web.png" alt=""> </a>
             </div>
           </div>
         </div>
@@ -460,29 +460,29 @@
           <div class="social-links d-flex justify-content-en col-lg-6">
             <a href="https://bincom.net/emigr8communityfacebook" target="_blank">
               <div class="social-icon">
-              <img src="/assets/img/iconoir_facebook.png" alt="" width="16.64px" height="16.64px">
+              <img src="./assets/img/iconoir_facebook.png" alt="" width="16.64px" height="16.64px">
               </div>
               </a>
             <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
             <a href="https://bincom.net/emigr8communitylinkedin" target="_blank">
               <div class="social-icon">
-                <img src="/assets/img/basil_linkedin-outline.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/basil_linkedin-outline.png" alt="" width="16.64px" height="16.64px">
               </div></a>
             <a href="https://bincom.net/emigr8communitytwitter" target="_blank">
               <div class="social-icon">
-                <img src="/assets/img/ri_twitter-x-line.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/ri_twitter-x-line.png" alt="" width="16.64px" height="16.64px">
               </div></a>
             <a href="https://www.youtube.com/@emigr8community" target="_blank">
               <div class="social-icon">
-                <img src="/assets/img/mingcute_youtube-line.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/mingcute_youtube-line.png" alt="" width="16.64px" height="16.64px">
               </div></a>
             <a href="https://bincom.net/emigr8community" target="_blank">
               <div class="social-icon">
-                <img src="/assets/img/iconoir_telegram.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/iconoir_telegram.png" alt="" width="16.64px" height="16.64px">
               </div></a>
             <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0" target="_blank">
               <div class="social-icon">
-                <img src="/assets/img/ic_outline-whatsapp.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/ic_outline-whatsapp.png" alt="" width="16.64px" height="16.64px">
               </div></a>
 
           </div>
