--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               <i class="bi bi-quote quote-icon"></i>
               <img src="assets/img/test-image2.png" alt="" class="testimonial-image">
               <div class="quote-div">
-                <p class="testimonial-quote">eMigr8 AI transformed my career path.</p>
+                <p class="testimonial-quote">eMigr8 transformed my career path.</p>
               </div>
               <p class="testimonial-name">Rekha Matthew</p>
               <p class="testimonial-role">Product Manager</p>
@@ -453,7 +453,7 @@
             <a href="" style="color: white;">
               <p>Privacy Policy</p>
             </a>
-            <p>© 2024 eMigr8.ai All Rights Reserved.</p>
+            <p>© 2024 eMigr8.ai   <span class="p-2">  All Rights Reserved.</span> </p>
           </div>
 
 
