removed ai from emigr8

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
       <!-- Section Title -->
       <div class="container title" data-aos="fade-up">
-        <h2>Why eMigr8 AI?</h2>
+        <h2>Why eMigr8 ?</h2>
       </div>
 
 
@@ -252,9 +252,9 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="feature-box item position-relative">
-                <div class="icon">
-                  <img src="./assets/img/prime_microchip-ai.png" alt="" width="64px" height="64px">
-                </div>
+              <div class="icon">
+                <img src="./assets/img/prime_microchip-ai.png" alt="" width="64px" height="64px">
+              </div>
               <!-- <i class="bi bi-activity icon"></i> -->
               <div>
                 <h4>AI-Powered Precision</h4>
@@ -324,8 +324,8 @@
         <div class="row g-5">
 
           <div class="col-lg-7 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-            <h3>The Future of Work is Global</h3>
-            <p class="mb-5"> eMigr8 AI is your key to navigating the rapidly evolving global talent landscape.
+            <h3>The Future of Talent is Global</h3>
+            <p class="mb-5"> eMigr8 is your key to navigating the rapidly evolving global talent landscape.
             </p>
             <a class="cta-btn align-self-start" href="#">Sign Up</a>
           </div>
@@ -343,7 +343,7 @@
     </section>
 
     <!-- testimonial section-->
-    <section id="testimonial" class="testimonial section">
+    <!--<section id="testimonial" class="testimonial section">
       <div class="container title" data-aos="fade-up">
         <h2>Join the Global Movement</h2>
         <p class="testimonial-subtitle">Don't just dream of a global career - power it with eMigr8.AI today.</p>
@@ -381,7 +381,7 @@
       </div>
 
       </div>
-    </section>
+    </section>-->
 
   </main>
 
@@ -404,18 +404,15 @@
             <div class="me-2">
               <a href="https://play.google.com/store/apps/details?id=com.bincom.emigr8app&amp;pcampaignid=web_share&amp;pli=1"
                 target="_blank">
-                <img width="102px" height="30px" class="mb-3"
-                  src="./assets/img/download-play.png"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-play.png"></a>
             </div>
-            <div class="me-2" >
+            <div class="me-2">
               <a href="https://apps.apple.com/ng/app/emigr8-tech-visa/id6480083188" target="_blank">
-                <img width="102px" height="30px" class="mb-3"
-                  src="./assets/img/download-apple.png"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-apple.png"></a>
             </div>
             <div class="me-2">
               <a href="https://app.emigr8visa.com" target="_blank">
-                <img width="102px" height="30px"
-                  src="./assets/img/Download for web.png" alt=""> </a>
+                <img width="102px" height="30px" src="./assets/img/Download for web.png" alt=""> </a>
             </div>
           </div>
         </div>
@@ -436,7 +433,8 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="https://bincom.co.uk/emigr8techvisalandscape/" target="_blank"
                 class="nav-link p-0 ">Tech Visa Landscape</a></li>
-            <li class="nav-item mb-2"><a href="https://emigr8visa.com/" target="_blank" class="nav-link p-0">eMigr8 Tech Visa</a></li>
+            <li class="nav-item mb-2"><a href="https://emigr8visa.com/" target="_blank" class="nav-link p-0">eMigr8 Tech
+                Visa</a></li>
           </ul>
 
         </div>
@@ -453,40 +451,46 @@
             <a href="" style="color: white;">
               <p>Privacy Policy</p>
             </a>
-            <p>© 2024 eMigr8.ai   <span class="p-2">  All Rights Reserved.</span> </p>
+            <p>© 2024 eMigr8 <span class="p-2"> All Rights Reserved.</span> </p>
           </div>
 
 
           <div class="social-links d-flex justify-content-en col-lg-6">
             <a href="https://bincom.net/emigr8communityfacebook" target="_blank">
               <div class="social-icon">
-              <img src="./assets/img/iconoir_facebook.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/iconoir_facebook.png" alt="" width="16.64px" height="16.64px">
               </div>
-              </a>
+            </a>
             <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
             <a href="https://bincom.net/emigr8communitylinkedin" target="_blank">
               <div class="social-icon">
                 <img src="./assets/img/basil_linkedin-outline.png" alt="" width="16.64px" height="16.64px">
-              </div></a>
+              </div>
+            </a>
             <a href="https://bincom.net/emigr8communitytwitter" target="_blank">
               <div class="social-icon">
                 <img src="./assets/img/ri_twitter-x-line.png" alt="" width="16.64px" height="16.64px">
-              </div></a>
+              </div>
+            </a>
             <a href="https://www.youtube.com/@emigr8community" target="_blank">
               <div class="social-icon">
                 <img src="./assets/img/mingcute_youtube-line.png" alt="" width="16.64px" height="16.64px">
-              </div></a>
+              </div>
+            </a>
             <a href="https://bincom.net/emigr8community" target="_blank">
               <div class="social-icon">
                 <img src="./assets/img/iconoir_telegram.png" alt="" width="16.64px" height="16.64px">
-              </div></a>
-            <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0" target="_blank">
+              </div>
+            </a>
+            <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
+              target="_blank">
               <div class="social-icon">
                 <img src="./assets/img/ic_outline-whatsapp.png" alt="" width="16.64px" height="16.64px">
-              </div></a>
+              </div>
+            </a>
 
           </div>
-          
+
         </div>
       </div>
 
