--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
       <!-- Section Title -->
       <div class="container title" data-aos="fade-up">
-        <h2>Why eMigr8 ?</h2>
+        <h2>Why eMigr8 AI?</h2>
       </div>
 
 
