--- a/index.html
+++ b/index.html
@@ -76,10 +76,6 @@
                   class="bi bi-play-circle-fill"></i><span>Play Video</span></a>
             </div>
           </div>
-
-          <!--<div class="col-lg-4 order-2 order-lg-2">
-            <img src="assets/img/hero-img.jpeg" class="img-fluid hero-img" alt="">
-          </div>-->
         </div>
       </div>
 
@@ -155,7 +151,7 @@
 
           <div class="col-lg-5 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4 me-5">
-              <img src="assets/img/how-works-img.jpeg" alt="" width="400px" height="650px">
+              <img src="assets/img/how-works-img.jpeg" alt="image of a girl and a robot" width="400px" height="650px">
             </div>
 
           </div>
@@ -253,7 +249,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="feature-box item position-relative">
               <div class="icon">
-                <img src="./assets/img/prime_microchip-ai.png" alt="" width="64px" height="64px">
+                <img src="./assets/img/prime_microchip-ai.png" alt="ai microchip" width="64px" height="64px">
               </div>
               <!-- <i class="bi bi-activity icon"></i> -->
               <div>
@@ -276,7 +272,7 @@
           <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="300">
             <div class="feature-box  item position-relative">
               <div class="icon">
-                <img src="./assets/img/fluent-mdl2_insights.png" alt="" width="64px" height="64px">
+                <img src="./assets/img/fluent-mdl2_insights.png" alt="lightbulb icon" width="64px" height="64px">
               </div>
               <!-- <i class="bi bi-lightbulb icon"></i> -->
               <div>
@@ -332,7 +328,7 @@
 
           <div class="col-lg-4 col-md-6  d-flex align-items-center">
             <div class="img">
-              <img src="assets/img/future.jpeg" alt="" width="400px" height="550px">
+              <img src="assets/img/future.jpeg" alt="image of a woman looking at a laptop" width="400px" height="550px">
             </div>
           </div>
 
@@ -341,47 +337,6 @@
       </div>
 
     </section>
-
-    <!-- testimonial section-->
-    <!--<section id="testimonial" class="testimonial section">
-      <div class="container title" data-aos="fade-up">
-        <h2>Join the Global Movement</h2>
-        <p class="testimonial-subtitle">Don't just dream of a global career - power it with eMigr8.AI today.</p>
-      </div>
-
-      <div class="container">
-        <div class="row justify-content-evenly d-flex">
-          <div class="col-md-5 col-lg-5">
-            <div class="testimonial-item">
-              <i class="bi bi-quote quote-icon"></i>
-              <img src="assets/img/test-image1.png" alt="" class="testimonial-image">
-              <div class="quote-div">
-                <p class="testimonial-quote">If you would not like to do this alone and get the help... reach out to
-                  eMigr8.</p>
-              </div>
-              <p class="testimonial-name">Oyinlola Akindele</p>
-              <p class="testimonial-role">Digital Marketing Expert</p>
-            </div>
-          </div>
-
-          <div class="col-md-5 col-lg-5">
-            <div class="testimonial-item">
-              <i class="bi bi-quote quote-icon"></i>
-              <img src="assets/img/test-image2.png" alt="" class="testimonial-image">
-              <div class="quote-div">
-                <p class="testimonial-quote">eMigr8 transformed my career path.</p>
-              </div>
-              <p class="testimonial-name">Rekha Matthew</p>
-              <p class="testimonial-role">Product Manager</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-      </div>
-    </section>-->
 
   </main>
 
@@ -412,7 +367,7 @@
             </div>
             <div class="me-2">
               <a href="https://app.emigr8visa.com" target="_blank">
-                <img width="102px" height="30px" src="./assets/img/Download for web.png" alt=""> </a>
+                <img width="102px" height="30px" src="./assets/img/Download for web.png" alt="download for web"> </a>
             </div>
           </div>
         </div>
@@ -458,34 +413,34 @@
           <div class="social-links d-flex justify-content-en col-lg-6">
             <a href="https://bincom.net/emigr8communityfacebook" target="_blank">
               <div class="social-icon">
-                <img src="./assets/img/iconoir_facebook.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/iconoir_facebook.png" alt="facebook icon" width="16.64px" height="16.64px">
               </div>
             </a>
             <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
             <a href="https://bincom.net/emigr8communitylinkedin" target="_blank">
               <div class="social-icon">
-                <img src="./assets/img/basil_linkedin-outline.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/basil_linkedin-outline.png" alt="linkedin icon" width="16.64px" height="16.64px">
               </div>
             </a>
             <a href="https://bincom.net/emigr8communitytwitter" target="_blank">
               <div class="social-icon">
-                <img src="./assets/img/ri_twitter-x-line.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/ri_twitter-x-line.png" alt="twitter icon" width="16.64px" height="16.64px">
               </div>
             </a>
             <a href="https://www.youtube.com/@emigr8community" target="_blank">
               <div class="social-icon">
-                <img src="./assets/img/mingcute_youtube-line.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/mingcute_youtube-line.png" alt="youtube icon" width="16.64px" height="16.64px">
               </div>
             </a>
             <a href="https://bincom.net/emigr8community" target="_blank">
               <div class="social-icon">
-                <img src="./assets/img/iconoir_telegram.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/iconoir_telegram.png" alt="telegram icon" width="16.64px" height="16.64px">
               </div>
             </a>
             <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
               target="_blank">
               <div class="social-icon">
-                <img src="./assets/img/ic_outline-whatsapp.png" alt="" width="16.64px" height="16.64px">
+                <img src="./assets/img/ic_outline-whatsapp.png" alt="whatsapp icon" width="16.64px" height="16.64px">
               </div>
             </a>
 
@@ -507,7 +462,6 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
