updated mobile view

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+      <div>
 
-      <a href="index.html" class="logo d-flex align-items-center">
+        <a href="index.html" class="logo ">
 
-        <img src="assets/img/newBlackLogo.png" alt="Logo">
+          <img src="assets/img/newBlackLogo.png" alt="Logo">
 
-      </a>
-
+        </a>
+      </div>
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero">For Talents</a></li>
@@ -60,7 +61,7 @@
       <div class="overlay"></div>
       <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
         <div class="row mb-5 mt-3">
-          <div class="col-lg-8 order-1 order-lg-1 d-flex flex-column justify-content-center hero-content">
+          <div class="col-lg-8  d-flex flex-column justify-content-center hero-content">
             <h5>eMigr8.ai</h5>
             <h2>Your Companion for Global</h2>
             <div class="scrolling-text-container">
@@ -68,12 +69,16 @@
               <h2 id="second-h2" class="heading hidden">& Settlement</h2>
             </div>
             <p>Become a Globally Attractive Talent and Unlock Your Full Potential.</p>
-            <div class="d-flex">
-              <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
-                target="_blank" class="btn-get-started">Start Chatting</a>
-              <a href="https://www.youtube.com/watch?v=tR1Yoo7BrkQ"
-                class="glightbox btn-watch-video d-flex align-items-center"><i
-                  class="bi bi-play-circle-fill"></i><span>Play Video</span></a>
+            <div class="d-flex buttons-div">
+              <div>
+                <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
+                  target="_blank" class="btn-get-started">Start Chatting</a>
+              </div>
+              <div>
+                <a href="https://www.youtube.com/watch?v=tR1Yoo7BrkQ"
+                  class="glightbox btn-watch-video d-flex align-items-center"><i
+                    class="bi bi-play-circle-fill"></i><span>Play Video</span></a>
+              </div>
             </div>
           </div>
         </div>
@@ -92,6 +97,7 @@
       </div><!-- End Section Title -->
 
       <div class="container">
+
 
         <div class="row gy-4">
 
@@ -145,17 +151,17 @@
 
       </div>
 
-      <div class="container">
+      <div class="container-fluid px-sm-1">
 
-        <div class="row gy-4">
+        <div class="row gy-4 mx-sm-0">
 
-          <div class="col-lg-5 about-images" data-aos="fade-up" data-aos-delay="200">
-            <div class="row gy-4 me-5">
+          <div class="col-lg-5 about-images " data-aos="fade-up" data-aos-delay="200">
+            <div class="row gy-4 me-lg-5 me-md-0">
               <img src="assets/img/how-works-img.jpeg" alt="image of a girl and a robot" width="400px" height="650px">
             </div>
 
           </div>
-          <div class="col-lg-6 content line" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 content line " data-aos="fade-up" data-aos-delay="100">
             <div class="step" data-aos="fade-up" data-aos-delay="200">
               <div>
                 <div class="circle">1</div>
@@ -242,11 +248,11 @@
       </div>
 
 
-      <div class="container">
+      <div class="container p-sm-0">
 
-        <div class="row g-5 feature-box-main">
+        <div class="row g-5 feature-box-main ">
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 feature-box-outer" data-aos="fade-up" data-aos-delay="100">
             <div class="feature-box item position-relative">
               <div class="icon">
                 <img src="./assets/img/prime_microchip-ai.png" alt="ai microchip" width="64px" height="64px">
@@ -257,9 +263,9 @@
                 <p>Go beyond traditional methods with data-driven solutions.</p>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- End feature Item -->
 
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-6  feature-box-outer" data-aos="fade-up" data-aos-delay="200">
             <div class="feature-box  item position-relative">
               <i class="bi bi-card-list icon"></i>
               <div>
@@ -267,9 +273,9 @@
                 <p>Each user get a unique strategy tailored specifically to their profile.</p>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- End feature Item -->
 
-          <div class="col-lg-6 " data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-6  feature-box-outer " data-aos="fade-up" data-aos-delay="300">
             <div class="feature-box  item position-relative">
               <div class="icon">
                 <img src="./assets/img/fluent-mdl2_insights.png" alt="lightbulb icon" width="64px" height="64px">
@@ -280,9 +286,9 @@
                 <p>Real-time updates and actionable recommendations when you need them</p>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- End feature Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-6  feature-box-outer" data-aos="fade-up" data-aos-delay="400">
             <div class="feature-box  item position-relative">
               <i class="bi bi-globe-americas icon"></i>
               <div>
@@ -290,12 +296,12 @@
                 <p>Move from where you are to where you want to be globally.</p>
               </div>
             </div>
-          </div><!-- End Service Item -->
+          </div><!-- End feature Item -->
         </div>
 
         <div class="row g-2 feature-box-main justify-content-center">
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-6  feature-box-outer" data-aos="fade-up" data-aos-delay="500">
             <div class="feature-box  item position-relative">
               <i class="bi bi-phone icon"></i>
               <div>
@@ -303,7 +309,7 @@
                 <p>A sleek, user-friendly platform designed for your success.</p>
               </div>
             </div>
-          </div><!-- End Service Item-->
+          </div><!-- End feature Item-->
         </div>
 
       </div>
@@ -314,19 +320,20 @@
 
 
     <section id="call-to-action" class="call-to-action section">
+      
 
       <div class="container " data-aos="zoom-out">
 
         <div class="row g-5">
 
-          <div class="col-lg-7 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
+          <div class="col-lg-7 col-md-6 content d-flex flex-column justify-content-center order-first order-md-first">
             <h3>The Future of Talent is Global</h3>
             <p class="mb-5"> eMigr8 is your key to navigating the rapidly evolving global talent landscape.
             </p>
             <a class="cta-btn align-self-start" href="#">Sign Up</a>
           </div>
 
-          <div class="col-lg-4 col-md-6  d-flex align-items-center">
+          <div class="col-lg-4 col-md-6  d-flex align-items-center cta-image">
             <div class="img">
               <img src="assets/img/future.jpeg" alt="image of a woman looking at a laptop" width="400px" height="550px">
             </div>
@@ -349,13 +356,13 @@
 
       <div class="row gy-4 py-2 mb-3 border-bottom">
         <div class="col-lg-4  col-md-12 mb-3">
-          <a href="#hero" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
+          <a href="#hero" class="d-flex align-items-center mb-3  link-body-emphasis text-decoration-none">
             <div class="logo">
               <img src="assets/img/logo3.png" alt="Our Logo">
             </div>
           </a>
-          <p class="fs-8 " style="color: white;">Empowering talent, globally</p>
-          <div class="d-flex mt-3">
+          <p class="footer-tagline">Empowering talent, globally</p>
+          <div class="d-flex mt-3 mb-sm-3">
             <div class="me-2">
               <a href="https://play.google.com/store/apps/details?id=com.bincom.emigr8app&amp;pcampaignid=web_share&amp;pli=1"
                 target="_blank">
@@ -403,7 +410,7 @@
       <div class="justify-content-between containe footer-bottom">
         <div class="row d-flex justify-content-between">
           <div class="copyright justify-content-start col-lg-6 ">
-            <a href="" style="color: white;">
+            <a href="" style="color: white;" class="policy">
               <p>Privacy Policy</p>
             </a>
             <p>© 2024 eMigr8 <span class="p-2"> All Rights Reserved.</span> </p>
