--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -36,7 +36,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
       <div>
 
-        <a href="index.html" class="logo ">
+        <a href="index.html" class="logo" aria-label="Go to Homepage">
 
           <img src="assets/img/newBlackLogo.png" alt="Logo">
 
@@ -157,7 +157,7 @@
 
           <div class="col-lg-5 about-images " data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4 me-lg-5 me-md-0">
-              <img src="assets/img/how-works-img.jpeg" alt="image of a girl and a robot" width="400px" height="650px">
+              <img src="assets/img/how-works-img.jpeg" alt="image of a man looking at a document" width="400px" height="650px">
             </div>
 
           </div>
@@ -330,7 +330,7 @@
             <h3>The Future of Talent is Global</h3>
             <p class="mb-5"> eMigr8 is your key to navigating the rapidly evolving global talent landscape.
             </p>
-            <a class="cta-btn align-self-start" href="#">Sign Up</a>
+            <a class="cta-btn align-self-start" href="#" aria-label="To sign up">Sign Up</a>
           </div>
 
           <div class="col-lg-4 col-md-6  d-flex align-items-center cta-image">
@@ -356,7 +356,7 @@
 
       <div class="row gy-4 py-2 mb-3 border-bottom">
         <div class="col-lg-4  col-md-12 mb-3">
-          <a href="#hero" class="d-flex align-items-center mb-3  link-body-emphasis text-decoration-none">
+          <a href="#hero" class="d-flex align-items-center mb-3  link-body-emphasis text-decoration-none" aria-label="Go to Homepage">
             <div class="logo">
               <img src="assets/img/logo3.png" alt="Our Logo">
             </div>
@@ -366,11 +366,11 @@
             <div class="me-2">
               <a href="https://play.google.com/store/apps/details?id=com.bincom.emigr8app&amp;pcampaignid=web_share&amp;pli=1"
                 target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-play.png"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-play.png" alt="download for android"></a>
             </div>
             <div class="me-2">
               <a href="https://apps.apple.com/ng/app/emigr8-tech-visa/id6480083188" target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-apple.png"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-apple.png" alt="download for ios"></a>
             </div>
             <div class="me-2">
               <a href="https://app.emigr8visa.com" target="_blank">
@@ -418,34 +418,34 @@
 
 
           <div class="social-links d-flex justify-content-en col-lg-6">
-            <a href="https://bincom.net/emigr8communityfacebook" target="_blank">
+            <a href="https://bincom.net/emigr8communityfacebook" target="_blank" aria-label="Go to our Facebook page">
               <div class="social-icon">
                 <img src="./assets/img/iconoir_facebook.png" alt="facebook icon" width="16.64px" height="16.64px">
               </div>
             </a>
             <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
-            <a href="https://bincom.net/emigr8communitylinkedin" target="_blank">
+            <a href="https://bincom.net/emigr8communitylinkedin" target="_blank" aria-label="Go to our Linkedin page">
               <div class="social-icon">
                 <img src="./assets/img/basil_linkedin-outline.png" alt="linkedin icon" width="16.64px" height="16.64px">
               </div>
             </a>
-            <a href="https://bincom.net/emigr8communitytwitter" target="_blank">
+            <a href="https://bincom.net/emigr8communitytwitter" target="_blank" aria-label="Go to our Twitter page">
               <div class="social-icon">
                 <img src="./assets/img/ri_twitter-x-line.png" alt="twitter icon" width="16.64px" height="16.64px">
               </div>
             </a>
-            <a href="https://www.youtube.com/@emigr8community" target="_blank">
+            <a href="https://www.youtube.com/@emigr8community" target="_blank" aria-label="Go to our Youtube page">
               <div class="social-icon">
                 <img src="./assets/img/mingcute_youtube-line.png" alt="youtube icon" width="16.64px" height="16.64px">
               </div>
             </a>
-            <a href="https://bincom.net/emigr8community" target="_blank">
+            <a href="https://bincom.net/emigr8community" target="_blank"  aria-label="Go to our Telegram page">
               <div class="social-icon">
                 <img src="./assets/img/iconoir_telegram.png" alt="telegram icon" width="16.64px" height="16.64px">
               </div>
             </a>
             <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
-              target="_blank">
+              target="_blank" aria-label="Go to our Whatsapp page">
               <div class="social-icon">
                 <img src="./assets/img/ic_outline-whatsapp.png" alt="whatsapp icon" width="16.64px" height="16.64px">
               </div>
