--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js" async></script>
 
 </body>
 
