updated contact us

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="d-flex buttons-div">
               <div>
                 <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
-                  target="_blank" class="btn-get-started">Start Chatting</a>
+                  target="_blank" class="btn-get-started">Start Now</a>
               </div>
               <div>
                 <a href="https://www.youtube.com/watch?v=tR1Yoo7BrkQ"
@@ -106,8 +106,8 @@
               <div class="icon">
                 <i class="bi bi-lightbulb"></i>
               </div>
-              <h3>Information & Integration</h3>
-              <p>Gain expert coaching, personalized resources, and insights to create a globally competitive profile and
+              <h3>Information, Inspiration & Education</h3>
+              <p>Gain expert coaching, personalised resources, and insights to create a globally competitive profile and
                 explore
                 international career opportunities and pathways.</p>
             </div>
@@ -118,7 +118,7 @@
               <div class="icon">
                 <i class="bi bi-file-text"></i>
               </div>
-              <h3>Personalized Roadmapping</h3>
+              <h3>Personalised Roadmapping</h3>
               <p>Receive tailored mobility strategies, actionable steps, and career recommendations based on analysis of
                 your
                 professional profile.</p>
@@ -244,7 +244,7 @@
 
       <!-- Section Title -->
       <div class="container title" data-aos="fade-up">
-        <h2>Why eMigr8 AI?</h2>
+        <h2>Why eMigr8 ?</h2>
       </div>
 
 
@@ -269,7 +269,7 @@
             <div class="feature-box  item position-relative">
               <i class="bi bi-card-list icon"></i>
               <div>
-                <h4>Personalization at scale</h4>
+                <h4>Personalisation at scale</h4>
                 <p>Each user get a unique strategy tailored specifically to their profile.</p>
               </div>
             </div>
@@ -330,7 +330,8 @@
             <h3>The Future of Talent is Global</h3>
             <p class="mb-5"> eMigr8 is your key to navigating the rapidly evolving global talent landscape.
             </p>
-            <a class="cta-btn align-self-start" href="#" aria-label="To sign up">Sign Up</a>
+            <a class="cta-btn align-self-start" href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
+                  target="_blank" aria-label="To sign up">Start Now</a>
           </div>
 
           <div class="col-lg-4 col-md-6  d-flex align-items-center cta-image">
@@ -380,13 +381,13 @@
         </div>
 
 
+        <div class="col-lg-2  col-md-12">
+          <h5>Talents</h5>
+
+        </div>
 
         <div class="col-lg-2  col-md-12">
           <h5>Partners</h5>
-
-        </div>
-        <div class="col-lg-2  col-md-12">
-          <h5>Talents</h5>
 
         </div>
 
@@ -402,15 +403,25 @@
         </div>
 
         <div class=" col-lg-2 col-6 col-md-12">
-          <a href="mailto:eMigr8@bincom.net" target="_blank">
             <h5>Contact Us</h5>
-          </a>
+            <ul class="nav flex-column">
+              <li class="nav-item mb-2">
+                Bincom Global, Scope Argyle House, 29-31, Euston Road, London NW1 2SD
+              </li>
+              <li class="nav-item mb-2">
+                +234 809 889 9883
+              </li>
+              <li class="nav-item mb-2">
+                +44 7859 946409
+              </li>
+              
+            </ul>
         </div>
       </div>
       <div class="justify-content-between containe footer-bottom">
         <div class="row d-flex justify-content-between">
           <div class="copyright justify-content-start col-lg-6 ">
-            <a href="" style="color: white;" class="policy">
+            <a href="https://dev.emigr8.bincom.net/privacy-policy" style="color: white;" class="policy">
               <p>Privacy Policy</p>
             </a>
             <p>© 2024 eMigr8 <span class="p-2"> All Rights Reserved.</span> </p>
