--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 
       </div>
 
-      <div class="container-fluid px-sm-1">
+      <div class="container px-sm-1">
 
-        <div class="row gy-4 mx-sm-0">
+        <div class="row gy-4 mx-sm-0 content">
 
           <div class="col-lg-5 about-images " data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4 me-lg-5 me-md-0">
@@ -322,9 +322,9 @@
     <section id="call-to-action" class="call-to-action section">
       
 
-      <div class="container " data-aos="zoom-out">
+      <div class="container-fluid " data-aos="zoom-out">
 
-        <div class="row g-5">
+        <div class="row  gy-4 mx-sm-0">
 
           <div class="col-lg-7 col-md-6 content d-flex flex-column justify-content-center order-first order-md-first">
             <h3>The Future of Talent is Global</h3>
