--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2>Your Companion for Global</h2>
             <div class="scrolling-text-container">
               <h2 id="first-h2" class="heading hidden">Talent Mobility, Relocation</h2>
-              <h2 id="second-h2" class="heading hidden">& Settlement</h2>
+              <h2 id="second-h2" class="heading hidden">&amp; Settlement</h2>
             </div>
             <p>Become a Globally Attractive Talent and Unlock Your Full Potential.</p>
             <div class="d-flex buttons-div">
