--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
           <div class="col-lg-5 about-images " data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4 me-lg-5 me-md-0">
-              <img src="assets/img/how-works-img.jpeg" alt="image of a man looking at a document" width="400px" height="650px">
+              <img src="assets/img/new-how-works-img.jpeg" alt="image of a man looking at a document" width="400px" height="650px">
             </div>
 
           </div>
@@ -336,7 +336,7 @@
 
           <div class="col-lg-4 col-md-6  d-flex align-items-center cta-image">
             <div class="img">
-              <img src="assets/img/future.jpeg" alt="image of a woman looking at a laptop" width="400px" height="550px">
+              <img src="assets/img/new-future.jpeg" alt="image of a woman looking at a laptop" width="400px" height="550px">
             </div>
           </div>
 
