--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       </div>
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero">For Talents</a></li>
-          <li><a href="#hero">For Partners</a></li>
+          <li><a href="#">For Talents</a></li>
+          <li><a href="#">For Partners</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -379,11 +379,18 @@
 
         <div class="col-lg-2  col-md-12">
           <h5>Talents</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href=" https://www.bincom.net/emigr8openday" target="_blank">Attend eMigr8 Open Day</a></li>
+            <li class="nav-item mb-2"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Gq9O9SzhNZK_8dZxoSZJTjaJ42Zld77kbXxD8EoHGqRNuQ/viewform" target="_blank"> Take an Eligibility Test</a></li>
+          </ul>
 
         </div>
 
         <div class="col-lg-2  col-md-12">
           <h5>Partners</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="">Become a Coach</a></li>
+          </ul>
 
         </div>
 
@@ -391,8 +398,8 @@
           <h5>Products</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="https://bincom.co.uk/emigr8techvisalandscape/" target="_blank"
-                class="nav-link p-0 ">Tech Visa Landscape</a></li>
-            <li class="nav-item mb-2"><a href="https://emigr8visa.com/" target="_blank" class="nav-link p-0">eMigr8 Tech
+                class="p-0 ">Tech Visa Landscape</a></li>
+            <li class="nav-item mb-2"><a href="https://emigr8visa.com/" target="_blank" class=" p-0">eMigr8 Tech
                 Visa</a></li>
           </ul>
 
