updated the blur image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <a href="index.html" class="logo" aria-label="Go to Homepage">
 
-          <img src="assets/img/newBlackLogo.png" alt="Logo">
+          <img src="assets/img/logo-down.png" alt="Logo" width="129px" height="67px">
 
         </a>
       </div>
@@ -58,7 +58,7 @@
       <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
         <div class="row mb-5 mt-3">
           <div class="col-lg-8  d-flex flex-column justify-content-center hero-content">
-            <h5>eMigr8.ai</h5>
+            <h5>eMigr8</h5>
             <h2>Your Companion for Global</h2>
             <div class="scrolling-text-container">
               <h2 id="first-h2" class="heading hidden">Talent Mobility, Relocation</h2>
@@ -163,7 +163,7 @@
                 <div class="circle">1</div>
               </div>
               <div>
-                <p>Sign up to start with a quick registration process .</p>
+                <p>Sign up to start with a quick registration process.</p>
               </div>
             </div>
             <div class="step" data-aos="fade-up" data-aos-delay="300">
@@ -355,7 +355,7 @@
         <div class="col-lg-4  col-md-12 mb-3">
           <a href="#hero" class="d-flex align-items-center mb-3  link-body-emphasis text-decoration-none" aria-label="Go to Homepage">
             <div class="logo">
-              <img src="assets/img/logo3.png" alt="Our Logo">
+              <img src="assets/img/logo3.png" alt="Our Logo" width="129px" height="63.49px">
             </div>
           </a>
           <p class="footer-tagline">Empowering talent, globally</p>
@@ -363,15 +363,15 @@
             <div class="me-2">
               <a href="https://play.google.com/store/apps/details?id=com.bincom.emigr8app&amp;pcampaignid=web_share&amp;pli=1"
                 target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-play.png" alt="download for android"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-play.png" alt="download for android"></a>
             </div>
             <div class="me-2">
               <a href="https://apps.apple.com/ng/app/emigr8-tech-visa/id6480083188" target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-apple.png" alt="download for ios"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-apple.png" alt="download for ios"></a>
             </div>
             <div class="me-2">
               <a href="https://app.emigr8visa.com" target="_blank">
-                <img width="102px" height="30px" src="./assets/img/Download for web.png" alt="download for web"> </a>
+                <img width="102px" height="30px" src="./assets/img/Download for web (2).png" alt="download for web"> </a>
             </div>
           </div>
         </div>
@@ -427,7 +427,7 @@
             <a href="https://dev.emigr8.bincom.net/privacy-policy" style="color: white;" class="policy">
               <p>Privacy Policy</p>
             </a>
-            <p>© 2024 eMigr8 <span class="p-2"> All Rights Reserved.</span> </p>
+            <p class="ms-2">© 2024 eMigr8 <span class="p-2"> All Rights Reserved.</span> </p>
           </div>
 
 
