--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <a href="index.html" class="logo" aria-label="Go to Homepage">
 
-          <img src="assets/img/logo-down.png" alt="Logo" width="129px" height="67px">
+          <img src="assets/img/logo-down1.png" alt="Logo" width="129px" height="67px">
 
         </a>
       </div>
@@ -363,11 +363,11 @@
             <div class="me-2">
               <a href="https://play.google.com/store/apps/details?id=com.bincom.emigr8app&amp;pcampaignid=web_share&amp;pli=1"
                 target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-play.png" alt="download for android"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-play1.png" alt="download for android"></a>
             </div>
             <div class="me-2">
               <a href="https://apps.apple.com/ng/app/emigr8-tech-visa/id6480083188" target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-apple.png" alt="download for ios"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-apple (1).png" alt="download for ios"></a>
             </div>
             <div class="me-2">
               <a href="https://app.emigr8visa.com" target="_blank">
